discussion/kv_engine/176659/176659_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Wait for memory to reduce before setting new quota

Change-Id: I0d707b894fa6b7218340c3a86fa93e8f61a80a7b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-29 13:48:03.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-29 14:28:26.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17559/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/bucket_quota_change_task.cc b/engines/ep/src/bucket_quota_change_task.cc
index 75b7c783b..9ec12dcc0 100644
--- a/engines/ep/src/bucket_quota_change_task.cc
+++ b/engines/ep/src/bucket_quota_change_task.cc
@@ -56,8 +56,8 @@ bool BucketQuotaChangeTask::run() {
         if (!setNewQuotaIfMemoryUsageAcceptable(changeState.desiredQuota)) {
             quotaChangeState.state = ChangeState::WaitingForMemoryReclamation;
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
             //            wakeUp();
             EP_LOG_CRITICAL_RAW(&quot;starting to wait&quot;);
         }
@@ -65,9 +65,9 @@ bool BucketQuotaChangeTask::run() {
     case ChangeState::WaitingForMemoryReclamation:
         if (!setNewQuotaIfMemoryUsageAcceptable(changeState.desiredQuota)) {
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
-//            wakeUp();
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
+            //            wakeUp();
             EP_LOG_CRITICAL_RAW(&quot;waiting&quot;);
         }
         break;
diff --git a/engines/ep/tests/module_tests/bucket_quota_change_test.cc b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
index 8091ed1bc..c97ab03b6 100644
--- a/engines/ep/tests/module_tests/bucket_quota_change_test.cc
+++ b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
@@ -322,7 +322,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
     flushVBucketToDiskIfPersistent(vbid, 1);
 
     // Poke the item and the pager setting to ensure that we will evict it
-    store-&gt;getVBucket(vbid)-&gt;ht.findOnlyCommitted(key)
+    store-&gt;getVBucket(vbid)
+            -&gt;ht.findOnlyCommitted(key)
             .storedValue-&gt;setFreqCounterValue(0);
     engine-&gt;getConfiguration().setItemEvictionAgePercentage(0);
     engine-&gt;getConfiguration().setItemEvictionFreqCounterAgeThreshold(255);
@@ -360,8 +361,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
 
     if (STParameterizedBucketTest::isMagma()) {
         // Allow magma 10 seconds to reduce memory.
-        auto timeout = std::chrono::steady_clock::now() +
-                std::chrono::seconds(10);
+        auto timeout =
+                std::chrono::steady_clock::now() + std::chrono::seconds(10);
         while (engine-&gt;getEpStats().getMaxDataSize() != newQuota) {
             if (timeout &lt; std::chrono::steady_clock::now()) {
                 // We waited too long for magma to reduce memory usage. Either

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17559/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47173/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
(34 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47173/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18409/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18409/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18409/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39625/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39625/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19512/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T14:03:59.450Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T14:03:59.450Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T14:03:59.450Z] (261 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19512/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20639/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T13:57:25.168Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T13:57:25.168Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T13:57:25.168Z] (61 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28672/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T13:57:58.851Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T13:57:58.851Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T13:57:58.851Z] (139 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28672/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8082/ : FAILURE

Compile error at [2022-06-29T13:51:55.701Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8082/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8181/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T14:05:26.747Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T14:05:26.747Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T14:05:26.747Z] (44 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8181/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21280/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes...2022-06-29T13:56:46.526810+00:00 CRITICAL (default) done
[2022-06-29T13:59:51.224Z] 2022-06-29T13:56:46.877337+00:00 CRITICAL (default) used:3398 wat:80
[2022-06-29T13:59:51.224Z] 2022-06-29T13:56:46.877670+00:00 CRITICAL (default) starting to wait
[2022-06-29T13:59:51.224Z] ../kv_engine/engines/ep/tests/ep_testsuite_basic.cc:119 Test failed: `" (Expected `100", got `1000000" - Incorrect smaller size.)
[2022-06-29T13:59:51.224Z] (1243 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21280/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20289/ : FAILURE

Compile error at [2022-06-29T13:51:05.568Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:17:10:
fatal error: libmagma/magma.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20289/ )
----------------------------------------------------------------------------------------------------------------------
